Fix alignment of subjects on home page

--- a/public/css/CCEI/global.css
+++ b/public/css/CCEI/global.css
@@ -498,20 +498,26 @@ details[open] {
   border-top: 1px solid #ccc;
   text-align: center;
 }
+.topic-cntr {
+  display: table;
+}
 .topic-lnk {
-  display: flex;
+  display: table-cell;
+  /* display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: flex-start; */
   text-decoration: none;
-  height: 8em;
+  padding: 16px;
+  height: 100%;
 }
 .topic-lnk:hover {
   background-color: #eee;
 }
 .topic-lnk i {
+  display: block;
   height: 2rem;
   margin-bottom: 16px;
-  margin-top: 16px;
+  /* margin-top: 16px; */
   font-size: 2.5em;
 }
 .topic-lnk:hover span,
